# local-messenger

./: README.md
Client/: CMakeLists.txt  README.md
Client/src/: Client.hpp  app.cpp  app.hpp  frame.cpp  frame.hpp
Server/: CMakeLists.txt  README.md
Server/src/: Server.cpp
